--- a/pages/components/nav/components/nav-wrapper/nav-wrapper.module.css
+++ b/pages/components/nav/components/nav-wrapper/nav-wrapper.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0px;
-  width: 1376px;
+  max-width: 1376px;
   height: 48px;
   margin: auto;
   margin-top: 33px;
