--- a/pages/components/grid-products/components/product-image/product-image.module.css
+++ b/pages/components/grid-products/components/product-image/product-image.module.css
@@ -3,6 +3,10 @@
   background-color: #151515;
   background-image: linear-gradient(180deg, #000 0%, #1D1D1D 100%);
   border-bottom: 2px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .image {
