--- a/pages/components/modal/modal.module.css
+++ b/pages/components/modal/modal.module.css
@@ -5,4 +5,14 @@
   position: absolute;
   top: 0;
   right: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 24px 32px;
+  max-width: 820px;
+  z-index: 999;
+}
+
+.close {
+  margin-bottom: 30px;
 }
