--- a/pages/components/modal/modal.module.css
+++ b/pages/components/modal/modal.module.css
@@ -5,12 +5,16 @@
   position: absolute;
   top: 0;
   right: 0;
+
+  max-width: 820px;
+  z-index: 999;
+}
+
+.top {
+  padding: 24px 32px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding: 24px 32px;
-  max-width: 820px;
-  z-index: 999;
 }
 
 .close {
