--- a/pages/components/modal/modal.module.css
+++ b/pages/components/modal/modal.module.css
@@ -5,9 +5,12 @@
   position: absolute;
   top: 0;
   right: 0;
-
+  min-height: 100vh;
   max-width: 820px;
   z-index: 999;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .top {
