--- a/pages/components/grid-products/components/product-image/product-image.module.css
+++ b/pages/components/grid-products/components/product-image/product-image.module.css
@@ -3,8 +3,22 @@
   background-image: linear-gradient(180deg, #000 0%, #1d1d1d 100%);
   border-bottom: 2px solid #fff;
   width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.photo {
-  /* width: 80%; */
+.imghover {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.imghover:hover {
+  opacity: 1;
 }
