--- a/pages/components/modal/components/product/product.module.css
+++ b/pages/components/modal/components/product/product.module.css
@@ -10,12 +10,18 @@
 }
 
 .hoodie {
-  width: 20%;
+  width: 30%;
+  max-width: 226px;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #151515;
   background-image: linear-gradient(180deg, #000 0%, #1d1d1d 100%);
+}
+
+.photo {
+  height: 150px;
+  width: 100px;
 }
 
 .text {
@@ -25,11 +31,14 @@
   padding: 0 12px;
   font-size: 18px;
   font-weight: 700;
-  width: 80%;
+  width: 70%;
 }
 
 .topside {
   color: #727272;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .topside h3 {
