--- a/pages/components/nav/components/nav-button-cart/nav-button-cart.module.css
+++ b/pages/components/nav/components/nav-button-cart/nav-button-cart.module.css
@@ -22,3 +22,14 @@
   letter-spacing: -0.583333px;
   text-transform: uppercase;
 }
+
+.topside {
+  padding: 24px 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.close {
+  margin-bottom: 30px;
+}
